@@ -1516,7 +1516,7 @@ prog.cob:24: error: invalid PICTURE character 'K'
 prog.cob:25: error: C must be followed by R
 prog.cob:26: error: D must be followed by B
 prog.cob:27: error: numeric field cannot be larger than 38 digits
-prog.cob:28: error: only up to 9 significant digits are permitted within parentheses
+prog.cob:28: error: only up to 10 significant digits are permitted within parentheses
 prog.cob:29: error: parentheses must be preceded by a picture symbol
 prog.cob:30: error: unbalanced parentheses
 prog.cob:31: error: parentheses must be preceded by a picture symbol
@@ -1594,7 +1594,7 @@ prog.cob:24: error: invalid PICTURE character 'K'
 prog.cob:25: error: C must be followed by R
 prog.cob:26: error: D must be followed by B
 prog.cob:27: error: numeric field cannot be larger than 38 digits
-prog.cob:28: error: only up to 9 significant digits are permitted within parentheses
+prog.cob:28: error: only up to 10 significant digits are permitted within parentheses
 prog.cob:29: error: parentheses must be preceded by a picture symbol
 prog.cob:30: error: unbalanced parentheses
 prog.cob:31: error: parentheses must be preceded by a picture symbol
